# py-universal-libs

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt  setup.py  update-pypi.sh
iflib_tools/api/: api.py
iflib_tools/config/: __init__.py  config.py
iflib_tools/http/: http.py
lib/api/: __init__.py
lib/config/: __init__.py
lib/database/: __init__.py
lib/tests/: test_compability.py
my_libs/: __init__.py
my_libs/api/: readme.md
my_libs/config/: __init__.py
my_libs/database/: __init__.py
my_libs/http/: __init__.py
my_libs/logger/: __init__.py
my_libs/utils/: __init__.py
